<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SeaweedApp</string>
    <string name="at_the_factory">At the factory</string>
    <string name="hello_world">Hello world!</string>
    <string name="blanks_string">   </string>
    
    <string name="action_settings">Settings</string>
    <string name="seaweed_center_logo">seaweed_center_logo</string>
    <string name="start_to_reports">To reports</string>
    <string name="start_to_shop">To the shop</string>
    <string name="start_to_factory">To the factory</string>
    <string name="raw_material_name">Raw material name </string>
    <string name="material_stock_title">Stock</string>
    <string name="material_stock_ordered">Ordered</string>
    <string name="material_stock_arrived">Arrived</string>
    <string name="material_stock_ordered_amount">0</string>
    <string name="material_stock_storage_amount">0</string>
    <string name="OK_button">OK</string>
    <string name="cancel_button">Cancel</string>
    <string name="title_item_detail">At the factory</string>
    <string name="editTextQuantityHint">Enter quantity here</string>
    <string name="title_activity_factory_tasks">Factory Tasks</string>
    <string name="button_factory_rawmtrl_manage">Raw material management</string>
    <string name="button_factory_prod_plan">Production planning</string>
    <string name="button_factory_prod_doc">Production documentation</string>
    <string name="title_rawmaterial_list">Raw Material Management</string>
    <string name="title_rawmaterial_detail">RawMaterial Detail</string>
    <string name="title_material_stock">Stock:</string>
    <string name="title_material_ordered">Ordered:</string>
    <string name="title_activity_production_plan">Production Planning</string>
    <string name="spinner_prompt_production_planning">Select what you want to produce</string>
    <string name="heading_production_planning"></string>
    <string name="title_productiondocument_list">ProductionDocuments</string>
    <string name="title_productiondocument_detail">ProductionDocument Detail</string>
    <string name="title_material_allocatedProduction">Reserved for production:</string>
	
    <string name="batch_id_heading_proddoc">Batch id:</string>
    <string name="qty_to_produce_heading_proddoc">Quantity to produce:</string>
    <string name="start_date_heading_proddoc">Start date</string>
    <string name="finish_date_heading_proddoc">Finish date</string>
    <string name="product_name_heading_proddoc">Product name</string>
    <string name="code_id_heading_proddoc">CodeID</string>
    <string name="fragrance_heading_proddoc">Fragrance:</string>
    <string name="size_heading_proddoc">Size:</string>
    <string name="recipe_list_heading_proddoc">Recipe list:</string>
    <string name="item_heading_proddoc">Item</string>
    <string name="notes_heading_proddoc">Notes</string>
    <string name="quantity_heading_proddoc">Quantity</string>
     <string name="instructions_heading_proddoc">Instructions:</string>
    <string name="enter_quantity_prodplan">Enter quantity</string>
    <string name="in_stock_heading_prodplan">In Stock</string>
    <string name="item_heading_prodplan">Item</string>
    <string name="need_heading_prodplan">Need</string>
    
    <string name="add_extra_row_to_batch">Add extra row</string>
</resources>
