<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rawmaterial_detail_container"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".ProductionDocumentDetailActivity"
    tools:ignore="MergeRootFrame">

 
<ScrollView
    android:layout_width="fill_parent"
    android:background="#ffffff"
    android:layout_height="fill_parent">
       
<LinearLayout 
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">
    
<GridLayout 
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" 
    android:rowCount="8"
    android:columnCount="10">

    <TextView
        android:id="@+id/productiondocument_detail_batchid"
        style="?android:attr/textAppearanceMedium"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_column="3"
        android:layout_gravity="left|top"
        android:layout_row="3"
        android:padding="10dp"
        android:text="@string/batch_id_heading_proddoc"
        android:textIsSelectable="true" />
    <TextView
        android:id="@+id/productiondocument_detail_quantity"
        style="?android:attr/textAppearanceMedium"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_column="5"
        android:layout_gravity="left|top"
        android:layout_row="3"
        android:padding="10dp"
        android:text="@string/qty_to_produce_heading_proddoc"
        android:textIsSelectable="true" />
    
    <TextView
        android:id="@+id/productiondocument_detail_startdate"
        style="?android:attr/textAppearanceMedium"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_column="5"
        android:layout_gravity="left|top"
        android:layout_row="5"
        android:padding="10dp"
        android:text="@string/start_date_heading_proddoc"
        android:textIsSelectable="true" />
    <TextView
        android:id="@+id/productiondocument_detail_finishdate"
        style="?android:attr/textAppearanceMedium"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_column="6"
        android:layout_gravity="left|top"
        android:layout_row="5"
        android:padding="10dp"
        android:text="@string/finish_date_heading_proddoc"
        android:textIsSelectable="true" />
    <TextView
        android:id="@+id/productiondocument_detail_productname"
        style="?android:attr/textAppearanceMedium"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_column="6"
        android:layout_gravity="left|top"
        android:layout_row="4"
        android:padding="10dp"
        android:text="@string/product_name_heading_proddoc"
        android:textIsSelectable="true" />
    
	<TextView
        android:id="@+id/productiondocument_detail_product_codeid"
        style="?android:attr/textAppearanceMedium"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_column="5"
        android:layout_gravity="left|top"
        android:layout_row="4"
        android:padding="10dp"
        android:text="@string/code_id_heading_proddoc"
        android:textIsSelectable="true" />
	<TextView
        android:id="@+id/productiondocument_detail_product_fragrance"
        style="?android:attr/textAppearanceMedium"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_column="6"
        android:layout_gravity="left|top"
        android:layout_row="3"
        android:padding="10dp"
        android:text="@string/fragrance_heading_proddoc"
        android:textIsSelectable="true" />
    <TextView
        android:id="@+id/productiondocument_detail_product_size"
        style="?android:attr/textAppearanceMedium"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_column="7"
        android:layout_gravity="left|top"
        android:layout_row="3"
        android:padding="10dp"
        android:text="@string/size_heading_proddoc"
        android:textIsSelectable="true" />
    
</GridLayout>

<RelativeLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">
    
	<!-- Title: Instructions -->
	<TextView
	android:id="@+id/title_recipeInstructions"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textStyle="bold"
    android:textAppearance="?android:attr/textAppearanceMedium"
    android:layout_gravity="left|top"
    android:padding="10dp"
    android:text="@string/instructions_heading_proddoc" />

             <!-- Instructions -->
    <TextView
        android:id="@+id/text_recipeInstructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_gravity="left|top"
        android:padding="10dp"
        android:layout_toRightOf="@+id/title_recipeInstructions"
        android:text="@string/instructions_heading_proddoc" />
    
    </RelativeLayout>

<View
  android:layout_width="1dp"
  android:layout_height="30dp">
</View>

<TextView
    android:id="@+id/productiondocument_recipe_title"
    style="?android:attr/textAppearanceLarge"
    android:layout_width="match_parent"
    android:layout_height="68dp"
    android:padding="20dp"
    android:text="@string/recipe_list_heading_proddoc"
    android:textIsSelectable="true" />

      <TableLayout 
         android:id="@+id/table_ProdDoc"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:shrinkColumns="*"
         android:stretchColumns="*"
         android:layout_margin="2dp">
           <TableRow
               android:id="@+id/tableRowHeadingProdDoc1"
               android:layout_height="wrap_content"
               android:layout_width="wrap_content"
               android:layout_margin="2dp"
               android:gravity="center_horizontal">
		        <TextView
                     android:id="@+id/textViewSpaceProdDoc1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_margin="2dp"
                     android:gravity="left"
                     android:text="@string/blanks_string"
                     android:textSize="18dp"
                     android:textStyle="bold"
                     android:typeface="serif"
                     android:visibility="visible" >
		        </TextView>
                <TextView
                     android:id="@+id/textViewHeadingItemProdDoc"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_margin="2dp"
                     android:gravity="left"
                     android:text="@string/item_heading_proddoc"
                     android:textSize="18dp"
                     android:textStyle="bold"
                     android:typeface="serif"
                     android:visibility="visible" >
		         </TextView>
		         <TextView
                     android:id="@+id/textViewHeadingMtrlQtyProdDoc"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_margin="2dp"
                     android:gravity="left"
                     android:text="@string/quantity_heading_proddoc"
                     android:textSize="18dp"
                     android:textStyle="bold"
                     android:typeface="serif"
                     android:visibility="visible" >
		         </TextView>
		         <TextView
                     android:id="@+id/textViewHeadingNotesProdDoc"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_margin="2dp"
                     android:gravity="left"
                     android:text="@string/notes_heading_proddoc"
                     android:textSize="18dp"
                     android:textStyle="bold"
                     android:typeface="serif"
                     android:visibility="visible" >
                 </TextView>
		         <TextView
                     android:id="@+id/textViewSpaceProdDoc1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_margin="2dp"
                     android:gravity="left"
                     android:text="@string/blanks_string"
                     android:textSize="18dp"
                     android:textStyle="bold"
                     android:typeface="serif"
                     android:visibility="visible" >
		         </TextView>
         </TableRow>
    
    <TableRow>
      
    </TableRow>   

          
      </TableLayout>
      
                       
                   <TableLayout
                     android:id="@+id/table_extra"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_margin="2dp" >
                       
                   </TableLayout>
                  <ImageButton
                     android:id="@+id/imageButtonOK"
                     android:layout_width="64dp"
                     android:layout_height="64dp"
                     android:layout_gravity="right|bottom"
                     android:contentDescription="@string/OK_button"
                     android:src="@drawable/ok_bullet_large" />
                  
                   <Button
                     android:id="@+id/buttonAddRow"
                     android:layout_width="140dp"
                     android:layout_height="64dp"
                     android:text="@string/add_extra_row_to_batch"/>
                   
                        

</LinearLayout>
</ScrollView>
</FrameLayout>