<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.savanticab.seaweedapp.FullscreenActivity$PlaceholderFragment" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:contentDescription="@string/seaweed_center_logo"
        android:maxWidth="@dimen/activity_horizontal_margin"
        android:padding="60dp"
        android:src="@drawable/seaweed_center_logo_2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom"
        android:layout_weight="1"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:padding="30dp" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <ImageView
                android:id="@+id/factoryImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/factory" />

            <Button
                android:id="@+id/button_factory_rawmtrl"
                android:layout_width="305dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/factoryImage"
                android:layout_centerHorizontal="true"
                android:text="@string/button_factory_rawmtrl_manage" />

            <Button
                android:id="@+id/button_factory_prod_plan"
                android:layout_width="305dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/button_factory_rawmtrl"
                android:layout_centerHorizontal="true"
                android:text="@string/button_factory_prod_plan" />

            <Button
                android:id="@+id/button_factory_prod_doc"
                android:layout_width="305dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/button_factory_prod_plan"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:text="@string/button_factory_prod_doc" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <ImageView
                android:id="@+id/presentImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/present" />

            <Button
                android:id="@+id/button_to_shop"
                android:layout_width="305dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/presentImage"
                android:layout_centerHorizontal="true"
                android:text="@string/start_to_shop" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <ImageView
                android:id="@+id/reportImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:adjustViewBounds="true"
                android:cropToPadding="false"
                android:maxHeight="100dp"
                android:maxWidth="100dp"
                android:scaleType="fitCenter"
                android:src="@drawable/reports" />

            <Button
                android:id="@+id/button_report"
                android:layout_width="305dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/reportImage"
                android:layout_centerHorizontal="true"
                android:text="@string/start_to_reports" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>